# dados-abertos-cnpj

./: .env.example  .env.sops.yaml  .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.md  database.py  fetch_ckan_api.py  fetcher.py  inspect_page.py  main.py  notifier.py  parse_html.py  pyproject.toml  requirements.txt  search_datasets.py  test_direct_url.py
.githooks/: pre-commit  pre-push
app/: config.py  db.py  dependencias.py  main.py
app/repositorios/: busca_repo.py  controle_repo.py  empresa_repo.py  estabelecimento_repo.py  lookup_repo.py  socio_repo.py
app/rotas/: cnpj.py  meta.py
app/schemas/: cnpj.py  comum.py  socio.py
app/servicos/: consulta_cnpj.py
cnpj_lib/: dominio.py  formatador.py  validador.py
docs/: CI-LOCAL.md  ESTADO.md  PRD.md  backlog-2026-05-23.html  briefing-2026-05-23.html  briefing-implementacao-2026-05-23.html  planejamento-2026-05-23.html  relatorio-execucao-2026-05-23.html
docs/design/: dossie-editorial.md
mcp_server/: server.py
migrations/: add_indices_post_sprint_zero.sql
monitor/: README.md  STATUS_SCHEMA.md  collect.py  dashboard.html  notify.sh  server.py  start.sh  status.sh  stop.sh
tests/: conftest.py  smoke_test.py
tests/integracao/: conftest.py  test_cnpj.py  test_meta.py  test_paginacao.py
tests/mcp/: conftest.py  test_busca.py  test_consulta.py  test_delta.py  test_utils.py
tests/unit/: test_dominio.py  test_formatador.py  test_validador.py
