[project]
name = "dados-abertos-cnpj"
version = "0.1.0"
description = "Pipeline de ingestão CNPJ (RFB) + API local + MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex Jesus", email = "alexjesus.tech@gmail.com" }]

dependencies = [
  "requests==2.31.0",
]

[project.optional-dependencies]
api = [
  "fastapi[standard]>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
]
mcp = [
  "mcp[cli]>=1.27",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5",
  "hypothesis>=6.115",
  "httpx>=0.27",
  "ruff>=0.7",
  "pylint>=3.3",
]

[project.scripts]
cnpj-api  = "app.main:run_uvicorn"
mcp-cnpj  = "mcp_server.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cnpj_lib", "app", "mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:hypothesis",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]  # line-too-long: prefer ruff format
